Fixed carousel image jumping during animation

--- a/src/afp2/resources/sass/app.scss
+++ b/src/afp2/resources/sass/app.scss
@@ -72,6 +72,12 @@ $dark: #1a202c;
     .active {
         display: flex;
     }
+    .carousel-item-next {
+        display: flex;
+    }
+    .carousel-item-prev {
+        display: flex;
+    }
 
 
 }
